--- a/index.html
+++ b/index.html
@@ -2,17 +2,109 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Muhurtham Invites</title>
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+    <title>Muhurtham Invites</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Icons -->
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+    <!-- Global Brand Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Global Styles (Brand Theme + Background + Typography) -->
+    <style>
+      :root {
+        /* Brand Colors */
+        --brand-gold: #c9a545;
+        --brand-gold-light: #e5d3a5;
+        --brand-maroon: #5e1a1a;
+        --brand-cream: #f7f4ee;
+        --soft-grey: #555;
+        --heading-color: #4a3728;
+
+        /* Shadows */
+        --card-shadow: 0px 2px 10px rgba(0,0,0,0.08);
+      }
+
+      body {
+        margin: 0;
+        padding: 0;
+        background: var(--brand-cream);
+        font-family: 'Poppins', sans-serif;
+        color: #333;
+        -webkit-font-smoothing: antialiased;
+      }
+
+      /* Global Section Heading Styling */
+      .section-heading {
+        font-family: 'Playfair Display', serif;
+        font-size: 1.8rem;
+        text-align: center;
+        margin: 20px 0 8px;
+        color: var(--heading-color);
+        letter-spacing: 0.5px;
+        font-weight: 600;
+      }
+
+      .section-subtitle {
+        text-align: center;
+        color: var(--soft-grey);
+        font-size: 0.95rem;
+        margin-bottom: 20px;
+      }
+
+      /* Horizontal scroll sections (Animated + E-cards) */
+      .horizontal-scroll-container {
+        display: flex;
+        overflow-x: auto;
+        gap: 18px;
+        padding: 10px 0 20px;
+        scroll-behavior: smooth;
+      }
+
+      .horizontal-scroll-container::-webkit-scrollbar {
+        height: 6px;
+      }
+      .horizontal-scroll-container::-webkit-scrollbar-thumb {
+        background: var(--brand-gold);
+        border-radius: 10px;
+      }
+
+      /* Card styling for new sections */
+      .preview-card {
+        min-width: 170px;
+        background: white;
+        border-radius: 12px;
+        padding: 10px;
+        box-shadow: var(--card-shadow);
+        border: 1px solid #eee;
+      }
+
+      .preview-card video,
+      .preview-card img {
+        width: 100%;
+        border-radius: 10px;
+      }
+
+      .preview-number {
+        text-align: center;
+        margin-top: 6px;
+        font-weight: 600;
+        color: var(--brand-maroon);
+      }
+
+    </style>
   </head>
+
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
